# MultiCoreCacheSim

./: .gitignore  README.md  build_docs.sh  cs4223-as2-exe.ps  cs4223-as2.cabal  live_heap.sh  run.sh  run_blackscholes.sh  run_blackscholes_dragon.sh  run_blackscholes_illinois.sh  run_blackscholes_mesi.sh  run_blackscholes_mesi_TEST.sh  run_blackscholes_profile.sh  run_blackscholes_profile_heap.sh  run_blackscholes_profile_heap_live.sh  run_bodytrack.sh  run_bodytrack_dragon.sh  run_bodytrack_illinois.sh  run_bodytrack_mesi.sh  run_default.sh  run_dragon_load.sh  run_dragon_store.sh  run_dragon_test.sh  run_fluidanimate_dragon.sh  run_fluidanimate_illinois.sh  run_fluidanimate_mesi.sh  run_illinois_load.sh  run_illinois_store.sh  run_illinois_test.sh  run_load.sh  run_loadstore.sh  run_other.sh  run_store.sh  stack.yaml  view_stats.sh
app/: Main.hs
data/test_four/: test_0.data  test_1.data  (+2 more)
docs/: Bus.html  Cache.html  CacheBlock.html  CacheParams.html  CacheSet.html  Definitions.html  Memory.html  MemoryAddress.html  Processor.html  SimulatorCore.html  Statistics.html  Trace.html  Utility.html  doc-index.html  index.html  mini_Bus.html  mini_Cache.html  mini_CacheBlock.html  mini_CacheParams.html  mini_CacheSet.html  mini_Definitions.html  mini_Memory.html  mini_MemoryAddress.html  mini_Processor.html  mini_SimulatorCore.html  mini_Statistics.html  mini_Trace.html  mini_Utility.html
src/: Bus.hs  Cache.hs  CacheBlock.hs  CacheParams.hs  CacheSet.hs  Definitions.hs  DragonCacheModifier.hs  DragonProtocol.hs  IllinoisProtocol.hs  MESI.hs  MESICacheModifier.hs  MESIProtocol.hs  Memory.hs  MemoryAddress.hs  Processor.hs  Protocol.hs  Protocols.hs  Simulator.hs  SimulatorCore.hs  Statistics.hs  Trace.hs  Utility.hs
stats/: cs4223-as2-exe.ps
test/: BusSpec.hs  OtherInstructionSpec.hs  Spec.hs  StatsSpec.hs
(+17 files in other folders)
