name:                cs4223-as2
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/frizensami/cs4223-as2#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     SimulatorCore, Trace, Definitions, Processor, Utility, Bus, Statistics, Cache, CacheParams, CacheSet, CacheBlock, Memory, MemoryAddress, Protocol, Protocols, MESIProtocol, DragonProtocol, IllinoisProtocol
  ghc-options:         -Wall -Wno-unused-matches -Wunused-local-binds -O2 -auto-all -optc-O3
  extensions:          BangPatterns
  build-depends:       base >= 4.7 && < 5, containers, array, NoTrace, diffarray
  default-language:    Haskell2010

executable cs4223-as2-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2 -optc-O3
  build-depends:       base
                     , cs4223-as2
  default-language:    Haskell2010

test-suite cs4223-as2-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:       StatsSpec, OtherInstructionSpec
  main-is:             Spec.hs
  build-depends:       base
                     , cs4223-as2
                     , hspec
                     , containers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/frizensami/cs4223-as2
